# ros_pub_sub

./: CMakeLists.txt  README.md  package.xml
msg/: myCustomMsg.msg
src/: pub.cpp  sub.cpp
