<?xml version="1.0"?>
<package format="2">
  <name>ros_pub_sub</name> <!-- 패키지 이름 -->
  <version>0.0.0</version> <!-- 패키지 버전 -->
  <description>The ros_pub_sub package</description> <!-- 패키지 설명 -->
  <maintainer email="menggu1234@naver.com">mjlee111</maintainer> <!-- 패키지 작성자 정보 -->
  <license>TODO</license> <!-- LICENSE -->

  <!-- 의존성 패키지 -->
  <buildtool_depend>catkin</buildtool_depend> 
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
